<resources>
    <string name="app_name">Leaderboard</string>
    <string name="tab_text_1">Learning Leaders</string>
    <string name="tab_text_2">Skill IQ leaders</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit_string">Submit</string>
    <string name="title_activity_submit">SubmitActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email Address</string>
    <string name="github_string">Project on GITHUB (link)</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="yes">Yes</string>
    <string name="submission_success">Submission Successful</string>
    <string name="submission_failed">Submission not Successful</string>
    <string name="sample_name">Taofeek Oduola</string>
    <string name="sample_skill_iq">300 skill IQ score,</string>
    <string name="sample_learning_hours">400 learning hours,</string>
</resources>