<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblack"
    tools:context=".SubmitActivity">


    <include
        android:id="@+id/include"
        layout="@layout/submit_app_bar" />

    <TextView
        android:id="@+id/project_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/project_submission"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/gold_line"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_text"></LinearLayout>

    <EditText
        android:id="@+id/first_name"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/white_button"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="@+id/last_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_text" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/white_button"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/first_name"
        app:layout_constraintTop_toTopOf="@+id/first_name" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"

        android:background="@drawable/white_button"
        android:ems="10"
        android:hint="@string/email_address"
        android:padding="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <EditText
        android:id="@+id/github_link"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/white_button"

        android:ems="10"
        android:hint="@string/github_string"
        android:padding="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"

        android:paddingBottom="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="@+id/email_address"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/email_address"
        app:layout_constraintTop_toBottomOf="@+id/email_address" />

    <Button
        android:id="@+id/submit_button_act"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/gold_button"
        android:text="@string/submit_string"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/github_link" />

</androidx.constraintlayout.widget.ConstraintLayout>